set temp height and overflow:hidden for slider to avoid FOUT

--- a/wp-content/themes/foundation-group/sass/app.scss
+++ b/wp-content/themes/foundation-group/sass/app.scss
@@ -358,9 +358,14 @@ ul.flyout,
 /************* Slider ********************/
 
 
+.main-slider {
+	height: 350px;
+}
 
 #featured {
 	border: 10px solid $base9;
+	height: 308px;
+	overflow: hidden;
 	h3 {
 		margin: 1.5em 0 .5em;
 		padding: 0 30px;
